# kpdfunlock

./: CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: main.cpp.3580F7C67C818288.idx
src/: main.cpp  resources.qrc
src/qml/: Main.qml
